unpackaged/main/default/objects/Patient_Notes__c/Patient_Notes__c.object-meta.xml
<CustomObject>
    <label>Patient Notes</label>
    <nameField>
        <displayFormat>NOTE-{000000}</displayFormat>
        <label>Patient Note</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>