unpackaged/main/default/objects/Patient_Notes__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <label>Note Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient emailed</fullName>
            </value>
            <value>
                <fullName>Patient called</fullName>
            </value>
            <value>
                <fullName>Dr review of bloods</fullName>
            </value>
            <value>
                <fullName>Early medication order</fullName>
            </value>
            <value>
                <fullName>Notes from Graeme</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Injection Training</fullName>
            </value>
            <value>
                <fullName>IPSS</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>