unpackaged/main/default/objects/Patient_Notes__c/validationRules/If_Training_Must_Have_Training_Attended.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Training_Must_Have_Training_Attended</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT( Training_Attended__c) ),ISPICKVAL( Note_Type__c ,&quot;Injection Training&quot;))</errorConditionFormula>
    <errorMessage>Where note type is Injection Training, please indicate whether training attended</errorMessage>
</ValidationRule>